added ability to update username and email

--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -1,3 +1,13 @@
+.right {
+  position: absolute;
+  right: 4rem;
+}
+
 .end {
   margin-left: auto;
+}
+
+.profileIcon {
+  font-size: 1.4rem;
+  padding-top: 1.4rem;
 }
