--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -56,3 +56,15 @@ body {
     background: #177ddc;
   }
 }
+
+.ant-layout-sider {
+  background-color: $bg-primary;
+}
+
+h1 {
+  text-transform: capitalize;
+}
+
+.ant-table-container {
+  padding-bottom: 5rem;
+}
