added user profile page

--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -1,6 +1,6 @@
 .right {
   position: absolute;
-  right: 4rem;
+  right: 8.2rem;
 }
 
 .end {
@@ -10,4 +10,8 @@
 .profileIcon {
   font-size: 1.4rem;
   padding-top: 1.4rem;
+}
+
+.popoverButton {
+  width: 7rem;
 }
