several small UX enhancements

--- a/src/styles/profile.module.scss
+++ b/src/styles/profile.module.scss
@@ -1,7 +1,12 @@
 .listButton {
+  float: right;
   padding-bottom: 1rem;
 }
 
 .summary {
   padding-bottom: 2rem;
+}
+
+.title {
+  display: inline-block;
 }
