--- a/src/styles/profile.module.scss
+++ b/src/styles/profile.module.scss
@@ -3,8 +3,13 @@
   padding-bottom: 1rem;
 }
 
+.stats {
+  padding: 1rem 0 4rem 0;
+}
+
 .summary {
-  padding-bottom: 2rem;
+  float: left;
+  padding-right: 5rem;
 }
 
 .title {
