--- a/src/styles/title.module.scss
+++ b/src/styles/title.module.scss
@@ -10,3 +10,12 @@
   padding-left: 0;
   list-style-type: none;
 }
+
+.meter {
+  float: right;
+  padding-right: 3rem;
+  p {
+    padding: 0.5rem 0 0 1.5rem;
+    color: #b0b0b0;
+  }
+}
