--- a/frontend/pages/home/HomePage.module.scss
+++ b/frontend/pages/home/HomePage.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors.scss';
+
 .content {
   display: grid;
   place-items: center;
@@ -9,9 +11,9 @@
 }
 
 .body {
-  background: #1d1d1d;
+  background: $bg-secondary;
 }
 
 .head {
-  background: #141414;
+  background: $bg-primary;
 }
