added ability  to search for games and users

--- a/frontend/components/navBar/NavBar.module.scss
+++ b/frontend/components/navBar/NavBar.module.scss
@@ -1,10 +1,6 @@
 .right {
   position: absolute;
-  right: 8.2rem;
-}
-
-.end {
-  margin-left: auto;
+  right: 3.1rem;
 }
 
 .profileIcon {
@@ -14,4 +10,9 @@
 
 .popoverButton {
   width: 7rem;
+}
+
+.search {
+  width: 24rem;
+  padding-top: 1rem;
 }
