--- a/frontend/pages/game/GamePage.module.scss
+++ b/frontend/pages/game/GamePage.module.scss
@@ -1,9 +1,5 @@
-.gameTitle {
-  display: inline-block;
-}
-
 .listButton {
-  float: right;
+  top: -3.5rem;
 }
 
 .list {
@@ -18,4 +14,17 @@
     padding: 0.5rem 0 0 1.5rem;
     color: #b0b0b0;
   }
+}
+
+.cover {
+  margin: -7rem 0 1rem 0;
+}
+
+.summary {
+  margin: -10rem 0 0 3rem;
+  width: 50%;
+}
+
+.genre {
+  text-transform: capitalize;
 }
