created game grid componenet

--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -39,6 +39,11 @@ body {
 
 .ant-card-body {
   background: $bg-secondary;
+  height: 5rem;
+}
+
+.ant-card-meta-description {
+  color: white;
 }
 
 body {
