--- a/frontend/pages/home/HomePage.module.scss
+++ b/frontend/pages/home/HomePage.module.scss
@@ -1,19 +1,3 @@
-@import '../../styles/colors.scss';
-
-.content {
-  display: grid;
-  place-items: center;
-}
-
-.card {
+.users {
   width: 25rem;
-  height: 14rem;
-}
-
-.body {
-  background: $bg-secondary;
-}
-
-.head {
-  background: $bg-primary;
 }
