--- a/frontend/pages/review/ReviewPage.module.scss
+++ b/frontend/pages/review/ReviewPage.module.scss
@@ -12,3 +12,10 @@
 .editedDate {
   margin-top: -0rem !important;
 }
+
+.loadMore {
+  text-align: center;
+  margin-top: 1rem;
+  height: 2rem;
+  line-height: 2rem;
+}
