refactored navbar component

--- a/frontend/components/navBar/NavBar.module.scss
+++ b/frontend/components/navBar/NavBar.module.scss
@@ -1,6 +1,7 @@
 .right {
   position: absolute;
   right: 3.1rem;
+  top: 0;
 }
 
 .profileIcon {
@@ -21,4 +22,5 @@
   position: relative;
   top: 0.7rem;
   margin-right: 1rem;
+  float: left;
 }
