fixed bugs on game page

--- a/frontend/pages/game/GamePage.module.scss
+++ b/frontend/pages/game/GamePage.module.scss
@@ -31,13 +31,8 @@ $favorite-color: #ff5e5b;
   }
 }
 
-.cover {
-  margin: -7rem 0 1rem 0;
-}
-
-.summary {
-  margin: -10rem 0 0 3rem;
-  width: 50%;
+.gameInfo {
+  margin: -6.5rem 0 2rem 0;
 }
 
 .genre {
