--- a/frontend/pages/game/GamePage.module.scss
+++ b/frontend/pages/game/GamePage.module.scss
@@ -18,7 +18,7 @@ $favorite-color: #ff5e5b;
 }
 
 .list {
-  padding-left: 0;
+  padding: 1rem 0 0 0;
   list-style-type: none;
 }
 
@@ -37,4 +37,8 @@ $favorite-color: #ff5e5b;
 
 .genre {
   text-transform: capitalize;
+}
+
+.offset {
+  margin-top: 1rem;
 }
